tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/stderr.expected
Error:
    tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:1:1:
  |
1 | language ESSENCE' 1.0
  | ^^^^^^^^^^^^^^^^^^^^^
Warning: Essence prime file detected, type checking is off

tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:8:54:
  |
8 |         matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`))] of int(0..undefined(division by zero: 0 / 0 : `int`))
  |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:8:54:
  |
8 |         matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`))] of int(0..undefined(division by zero: 0 / 0 : `int`))
  |                                                      ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:8:54:
  |
8 |         matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`))] of int(0..undefined(division by zero: 0 / 0 : `int`))
  |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:8:54:
  |
8 |         matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`))] of int(0..undefined(division by zero: 0 / 0 : `int`))
  |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:8:54:
  |
8 |         matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`))] of int(0..undefined(division by zero: 0 / 0 : `int`))
  |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`)), bool,
   |                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`)), bool,
   |                                                      ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`)), bool,
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`)), bool,
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:10:54:
   |
10 |         matrix indexed by [int(1..undefined(division by zero: 0 / 0 : `int`)), bool,
   |                                                      ^
Missing by

tests/parse_print/autogen-bilals-fixed/ac72aae66b512a833a3ec00755c2084d/ac72aae66b512a833a3ec00755c2084d.eprime.essence:11:28:
   |
11 |                            bool, bool, bool] of bool
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens
